--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <div class="d-flex align-items-center gap-3">
                 <h2 class="text-primary" id="title">Thực Đơn Canteen</h2>
                 <select id="languageSelect" class="form-select form-select-sm" onchange="changeLanguage()" style="width: auto;">
-                    <option value="vi">🇻🇳 VN</option>
-                    <option value="en">🇬🇧 EN</option>
+                    <option value="vi">Viet Nam</option>
+                    <option value="en">English</option>
                 </select>
             </div>
         </div>
