--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Thực Đơn Canteen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@ss/bootstrap.min.css
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
       background-color: #f8f9fa;
@@ -69,7 +69,7 @@
 
   <div class="container">
     <div class="header d-flex align-items-center justify-content-between flex-wrap">
-      https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png
+      <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="Logo" class="logo" />
       <div class="d-flex align-items-center gap-3">
         <h2 class="text-primary m-0" id="pageTitle">Thực Đơn Canteen</h2>
         <select id="languageSelect" class="form-select form-select-sm" style="width: auto">
@@ -186,10 +186,54 @@
       Object.keys(grouped).forEach(date => {
         const card = document.createElement("div");
         card.className = "col-12 menu-card";
-        card.innerHTML = `<div class="menu-title">${t.dayTitle} ${date}</div>`;
+        card.innerHTML = '<div class="menu-title">${t.dayTitle} ${date}</div>';
         ["Sáng", "Trưa", "Tối"].forEach(meal => {
           const items = grouped[date].filter(i => i["Bữa ăn"] === meal);
           if (items.length > 0) {
             const icon = meal === "Sáng" ? "🌅" : meal === "Trưa" ? "🌞" : "🌙";
             const section = document.createElement("div");
-            section
+            section.innerHTML = '<h6>${icon} ${meal}</h6>';
+            items.forEach(item => {
+              section.innerHTML += '
+                <div><strong>${t.appetizer}:</strong> ${item[\'Khai vị (${currentLang})\'] || ""}</div>
+                <div><strong>${t.main}:</strong> ${item[\'Món chính (${currentLang})\'] || ""}</div>
+                <div><strong>${t.dessert}:</strong> ${item[\'Tráng miệng (${currentLang})\'] || ""}</div>
+                <hr>';
+            });
+            card.appendChild(section);
+          }
+        });
+        container.appendChild(card);
+      });
+    }
+
+    function filterMenu() {
+      const type = document.getElementById("searchType").value;
+      const date = new Date(document.getElementById("searchDate").value);
+      if (!date.getTime()) return;
+      showLoading(true);
+      fetchMenuData().then(data => {
+        let filtered = [];
+        data.forEach(item => {
+          const itemDate = new Date(item["Ngày"]);
+          if (type === "day" && itemDate.toDateString() === date.toDateString()) {
+            filtered.push(item);
+          } else if (type === "week") {
+            const startOfWeek = new Date(date);
+            startOfWeek.setDate(date.getDate() - date.getDay());
+            const endOfWeek = new Date(startOfWeek);
+            endOfWeek.setDate(startOfWeek.getDate() + 6);
+            if (itemDate >= startOfWeek && itemDate <= endOfWeek) {
+              filtered.push(item);
+            }
+          } else if (type === "month" && itemDate.getMonth() === date.getMonth() && itemDate.getFullYear() === date.getFullYear()) {
+            filtered.push(item);
+          }
+        });
+        renderMenu(filtered);
+        showLoading(false);
+      }).catch(() => showLoading(false));
+    }
+  </script>
+</body>
+</html>
